# opensignals

./: .flake8  .gitignore  .mypy.ini  .pylintrc  README.md  pyproject.toml  requirements-dex.txt  requirements.txt  setup.py  setup.sh  tasks.py
.github/workflows/: build.yml  pylint.yml  pypi.yml
src/opensignals/: __about__.py  __init__.py  __main__.py  features.py  utils.py
src/opensignals/data/: common.py  fmp.py  iexcloud.py  provider.py  yahoo.py
src/ysignals/: __about__.py  __init__.py  __main__.py  features.py
src/ysignals/data/: yahoo.py
tests/integration/: test_data_pipeline.py
tests/unit/: test_feature_generator_numerai_ticker_col.py  test_provider_numerai_ticker_col.py
