[tool.poetry]
name = "opensignals"
version = "0.0.2"
description = ""
authors = ["Jordi Villar <jrdi.villar@gmail.com>"]

[tool.poetry.urls]
Issues = "https://github.com/councilofelders/opensignals/issues"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
docopt = "^0.6.2"
pandas = "^1.3.4"
numpy = "^1.21.3"
pyarrow = "^6.0.0"
requests = "^2.26.0"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
pylint = "^2.11.1"
black = "^21.10b0"
isort = "^5.10.0"
invoke = "^1.6.0"
bandit = "^1.7.0"
flake8 = "^4.0.1"
mypy = "^0.910"
types-python-dateutil = "^2.8.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.mypy]
files = "src/**/*.py"
exclude = ".venv/"
allow_untyped_decorators = false
warn_unused_configs = true
allow_subclassing_any = false
#allow_untyped_calls = false
#allow_untyped_defs = false
allow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = false
pretty = true

[[tool.mypy.overrides]]
module = [
    "pandas", 
    "requests", 
    "tqdm", 
    "docopt"
]
ignore_missing_imports = true
